--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,45 @@
-body{
-    background-color: #efefef;
-  }
+body {
+  background-color: #efefef;
+}
 
-  h1{
-    text-align: center;
-  }
-  
-  header, .alert{
-    z-index: 100;
-  }
-  .description{
-    height: 25px;
-    overflow: hidden;
-    transition: height .3s ease-in .3s;
-  }
-  .description:hover{
-    height: 80px;
-  }
- .carta{
+h1 {
+  text-align: center;
+}
 
-    border-radius: 0.5rem;
-    transition: box-shadow 0.3s ease;
- }
+.flex {
+  background-color: #27a4f2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
- .carta:hover{
+header,
+.alert {
+  z-index: 100;
+}
+.description {
+  height: 25px;
+  overflow: hidden;
+  transition: height 0.3s ease-in 0.3s;
+}
+.description:hover {
+  height: 80px;
+}
+.carta {
+  border-radius: 0.5rem;
   transition: box-shadow 0.3s ease;
-  box-shadow: 0 0.1rem 0.4rem rgba(0,0, 0, 0.3);
-  
+}
 
- }
-  
-  .table__productos{
-    display: flex;
-  }
-  .table__productos > img{
-    width: 9rem;
-    object-fit: contain;
-    border-radius: 6px;
-    margin-right: 20px;
-  }
-  .table__cantidad > input{
-    width: 40px;
-    border: none;
-    outline: 0;
-    font-size: 16px;
-    font-weight: 700;
-    margin-right: 30px;
-    margin-bottom: 20px;
-  }
-  .hide, .remove{
-    display: none;
-  }
+.carta:hover {
+  transition: box-shadow 0.3s ease;
+  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.3);
+}
+
+.hide,
+.remove {
+  display: none;
+}
+
+.boton {
+  margin-bottom: 0;
+}
